--- a/src/FlossApp.Application/FlossApp.Application.csproj
+++ b/src/FlossApp.Application/FlossApp.Application.csproj
@@ -24,7 +24,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.10" />
-    <PackageReference Include="MethodTimer.Fody" Version="3.2.2" />
+    <PackageReference Include="MethodTimer.Fody" Version="3.2.2" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
