--- a/src/FlossApp.Wasm/FlossApp.Wasm.csproj
+++ b/src/FlossApp.Wasm/FlossApp.Wasm.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\FlossApp.Application\FlossApp.Application.csproj" />
   </ItemGroup>
 
+  <PropertyGroup>
+    <StaticWebAssetBasePath>floss-app-v2/</StaticWebAssetBasePath>
+  </PropertyGroup>
+
 </Project>
