--- a/src/FlossApp.Application/FlossApp.Application.csproj
+++ b/src/FlossApp.Application/FlossApp.Application.csproj
@@ -12,6 +12,7 @@
     <None Remove="Resources\Copic.json" />
     <None Remove="Resources\Dmc.json" />
     <None Remove="Resources\Html.json" />
+    <None Remove="Resources\Pantone.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +20,7 @@
     <EmbeddedResource Include="Resources\Copic.json" />
     <EmbeddedResource Include="Resources\Dmc.json" />
     <EmbeddedResource Include="Resources\Html.json" />
+    <EmbeddedResource Include="Resources\Pantone.json" />
   </ItemGroup>
 
   <ItemGroup>
