--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,6 @@
 <Project>
   <PropertyGroup>
     <LangVersion>preview</LangVersion>
+    <WarningsAsErrors>CA2017</WarningsAsErrors>
   </PropertyGroup>
 </Project>
