Add i18n, implement partially on similar colors page

--- a/src/FlossApp.Application/FlossApp.Application.csproj
+++ b/src/FlossApp.Application/FlossApp.Application.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FlossApp.Core\FlossApp.Core.csproj" PrivateAssets="All" />
+    <ProjectReference Include="..\FlossApp.I18n\FlossApp.I18n.csproj" />
   </ItemGroup>
 
 </Project>
