Better tests with generators

--- a/test/FlossApp.Application.Tests/FlossApp.Application.Tests.csproj
+++ b/test/FlossApp.Application.Tests/FlossApp.Application.Tests.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Resources\en-US\I18nServiceTests.json" />
   </ItemGroup>
 
