Add WPlace basic colors

--- a/src/FlossApp.Application/FlossApp.Application.csproj
+++ b/src/FlossApp.Application/FlossApp.Application.csproj
@@ -13,6 +13,7 @@
     <None Remove="Resources\Dmc.json" />
     <None Remove="Resources\Html.json" />
     <None Remove="Resources\Pantone.json" />
+    <None Remove="Resources\Wplace.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +22,7 @@
     <EmbeddedResource Include="Resources\Dmc.json" />
     <EmbeddedResource Include="Resources\Html.json" />
     <EmbeddedResource Include="Resources\Pantone.json" />
+    <EmbeddedResource Include="Resources\Wplace.json" />
   </ItemGroup>
 
   <ItemGroup>
